--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
 <body>
     <main class="main-container">
         <h1>Calcular a Média do Aluno</h1>
-        <section class="main-content">
-            <div class="form-container">
-                <form id="form-notas">
+        <section   section class="main-content">
+            <form id="form-notas">
+                <div id="n">
                     <label for="nome">Nome completo do aluno:</label>
                     <input type="text" id="nome" name="nome">
-
-                    <label for="nota1">Informe a nota 1</label>
+                </div>
+                <div id="n1">
+                    <label for="nota1">Informe a 1ª nota</label>
                     <input type="number" id="nota1" name="nota1">
-                    <label for="nota2">Informe a nota 2</label>
+                </div>
+                <div id="n2">
+                    <label for="nota2">Informe a 2ª nota</label>
                     <input type="number" id="nota2" name="nota2">
-                    <label for="nota3">Informe a nota 3</label>
+                </div>
+                <div id="n3">
+                    <label for="nota3">Informe a 3ª nota</label>
                     <input type="number" id="nota3" name="nota3">
-
-                    <button type="submit" id="btn">Calcular</button>
-                </form>                
-            </div> <!-- fim form-container -->
+                </div>
+                <button type="submit" id="btn">Calcular</button>
+            </form>
         </section>
-        <section>
+        <section class="final-content">
             <h2>Nota final do Aluno</h2>
             <div id="mensagem"></div>
         </section>
     </main>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
